--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  font-family: 'Montserrat', sans-serif;
-  background-color: #34495e;
-  color: #fff;
-}
+
 h1 {
   text-align: center;
   margin: 2rem 0;
@@ -126,6 +122,22 @@ h1 {
   line-height: 1.5rem;
   border-top: 1px solid;
   border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+}
+.mod input{
+  color: white;
+}
+
+.modificar{
+  border-radius: 25px;
+  width: 50%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 100px;
+  background-color: rgba(0,0,0,0.75);
+  box-shadow: 0px 15px 15px -5px rgba(0,0,0,0.70);
+}
+.modificar input, .modificar h4{
+  color: white;
 }
 
 @media(max-width:767px) {
